[package]
name = "newsblog-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1.0.188"
futures = "0.3.28"
chrono = {version = "0.4.35", features = ["serde", "rustc-serialize"]}
tokio = {version = "1.32.0", features = ["full"]}
markdown = "1.0.0-alpha.16"
env_logger = "0.11.3"
actix-files = "0.6.5"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-runtime"]


